@@ -1068,6 +1068,12 @@ specifier|private
 name|int
 name|numNodes
 decl_stmt|;
+DECL|field|updateCommand
+specifier|private
+name|UpdateCommand
+name|updateCommand
+decl_stmt|;
+comment|// the current command this processor is working on.
 DECL|method|DistributedUpdateProcessor
 specifier|public
 name|DistributedUpdateProcessor
@@ -1333,6 +1339,41 @@ condition|(
 name|zkEnabled
 condition|)
 block|{
+if|if
+condition|(
+operator|(
+name|updateCommand
+operator|.
+name|getFlags
+argument_list|()
+operator|&
+operator|(
+name|UpdateCommand
+operator|.
+name|REPLAY
+operator||
+name|UpdateCommand
+operator|.
+name|PEER_SYNC
+operator|)
+operator|)
+operator|!=
+literal|0
+condition|)
+block|{
+name|isLeader
+operator|=
+literal|false
+expr_stmt|;
+comment|// we actually might be the leader, but we don't want leader-logic for these types of updates anyway.
+name|forwardToLeader
+operator|=
+literal|false
+expr_stmt|;
+return|return
+name|nodes
+return|;
+block|}
 name|String
 name|coreName
 init|=
@@ -1822,6 +1863,33 @@ name|DistribPhase
 name|phase
 parameter_list|)
 block|{
+name|boolean
+name|isReplayOrPeersync
+init|=
+operator|(
+name|updateCommand
+operator|.
+name|getFlags
+argument_list|()
+operator|&
+operator|(
+name|UpdateCommand
+operator|.
+name|REPLAY
+operator||
+name|UpdateCommand
+operator|.
+name|REPLAY
+operator|)
+operator|)
+operator|!=
+literal|0
+decl_stmt|;
+if|if
+condition|(
+name|isReplayOrPeersync
+condition|)
+return|return;
 name|String
 name|from
 init|=
@@ -1833,21 +1901,6 @@ operator|.
 name|get
 argument_list|(
 literal|"distrib.from"
-argument_list|)
-decl_stmt|;
-name|boolean
-name|logReplay
-init|=
-name|req
-operator|.
-name|getParams
-argument_list|()
-operator|.
-name|getBool
-argument_list|(
-name|LOG_REPLAY
-argument_list|,
-literal|false
 argument_list|)
 decl_stmt|;
 name|boolean
@@ -1869,9 +1922,6 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
-operator|!
-name|logReplay
-operator|&&
 name|DistribPhase
 operator|.
 name|FROMLEADER
@@ -2145,6 +2195,10 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|updateCommand
+operator|=
+name|cmd
+expr_stmt|;
 if|if
 condition|(
 name|zkEnabled
@@ -2879,7 +2933,7 @@ expr_stmt|;
 block|}
 block|}
 name|boolean
-name|isReplay
+name|isReplayOrPeersync
 init|=
 operator|(
 name|cmd
@@ -2887,9 +2941,15 @@ operator|.
 name|getFlags
 argument_list|()
 operator|&
+operator|(
 name|UpdateCommand
 operator|.
 name|REPLAY
+operator||
+name|UpdateCommand
+operator|.
+name|REPLAY
+operator|)
 operator|)
 operator|!=
 literal|0
@@ -2900,7 +2960,7 @@ init|=
 name|isLeader
 operator|&&
 operator|!
-name|isReplay
+name|isReplayOrPeersync
 decl_stmt|;
 name|VersionBucket
 name|bucket
@@ -3922,6 +3982,10 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|updateCommand
+operator|=
+name|cmd
+expr_stmt|;
 if|if
 condition|(
 operator|!
@@ -4718,7 +4782,7 @@ argument_list|)
 expr_stmt|;
 comment|// normalize to positive version
 name|boolean
-name|isReplay
+name|isReplayOrPeersync
 init|=
 operator|(
 name|cmd
@@ -4726,9 +4790,15 @@ operator|.
 name|getFlags
 argument_list|()
 operator|&
+operator|(
 name|UpdateCommand
 operator|.
 name|REPLAY
+operator||
+name|UpdateCommand
+operator|.
+name|REPLAY
+operator|)
 operator|)
 operator|!=
 literal|0
@@ -4739,7 +4809,7 @@ init|=
 name|isLeader
 operator|&&
 operator|!
-name|isReplay
+name|isReplayOrPeersync
 decl_stmt|;
 if|if
 condition|(
@@ -5041,6 +5111,31 @@ parameter_list|()
 block|{
 if|if
 condition|(
+operator|(
+name|updateCommand
+operator|.
+name|getFlags
+argument_list|()
+operator|&
+operator|(
+name|UpdateCommand
+operator|.
+name|REPLAY
+operator||
+name|UpdateCommand
+operator|.
+name|PEER_SYNC
+operator|)
+operator|)
+operator|!=
+literal|0
+condition|)
+block|{
+comment|// for log reply or peer sync, we don't need to be connected to ZK
+return|return;
+block|}
+if|if
+condition|(
 name|zkController
 operator|.
 name|isConnected
@@ -5248,7 +5343,7 @@ argument_list|)
 expr_stmt|;
 comment|// normalize to positive version
 name|boolean
-name|isReplay
+name|isReplayOrPeersync
 init|=
 operator|(
 name|cmd
@@ -5256,9 +5351,15 @@ operator|.
 name|getFlags
 argument_list|()
 operator|&
+operator|(
 name|UpdateCommand
 operator|.
 name|REPLAY
+operator||
+name|UpdateCommand
+operator|.
+name|REPLAY
+operator|)
 operator|)
 operator|!=
 literal|0
@@ -5269,7 +5370,7 @@ init|=
 name|isLeader
 operator|&&
 operator|!
-name|isReplay
+name|isReplayOrPeersync
 decl_stmt|;
 if|if
 condition|(
@@ -5607,6 +5708,10 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
+name|updateCommand
+operator|=
+name|cmd
+expr_stmt|;
 if|if
 condition|(
 name|zkEnabled
